# Fractron9000

./: .gitignore  AGENTS.md  Cargo.toml  LEGACY_ITERATE_KERNEL.md  Trunk.toml  index.html  release-runbook.md
.github/workflows/: pages.yml
Legacy/: Fractron9000.sln
Legacy/CudaDotNet/: CudaDotNet.csproj
Legacy/Fractron9000/: DefaultFiles.Designer.cs  DeviceEntry.cs  EngineManager.cs  FlameFileIO.cs  Fractal.cs  FractalList.cs  FractalManager.cs  Fractron9000.csproj  FractronConfig.cs  NativeStructs.cs  Program.cs
Legacy/Fractron9000/CPUEngine/: CPUDeviceEntry.cs  CPUFractalEngine.cs  tonemap.frag.glsl
Legacy/Fractron9000/CPUIterator/: CPUIterator.ncb
Legacy/Fractron9000/CudaEngine/: CudaDeviceEntry.cs  CudaFractalEngine.cs
Legacy/Fractron9000/HybridEngine/: HybridDeviceEntry.cs  HybridFractalEngine.cs
Legacy/Fractron9000/Kernels/: KernelResources.Designer.cs  kernels.c  kernels.cl  kernels.cu  kernels.ptx  kernels_low.cl
Legacy/Fractron9000/OpenCLEngine/: OpenCLDeviceEntry.cs  OpenCLFractalEngine.cs
Legacy/Fractron9000/Properties/: Resources.Designer.cs
Legacy/Fractron9000/UI/: ConfigForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Narratives.Designer.cs  Narratives.resx  RenderControl.cs
Legacy/MTUtil/: Affine2D.cs  MTUtil.csproj  Util.cs
crates/fractal-core/: Cargo.toml
crates/fractron9000/: Cargo.toml  Trunk.toml  index.html
crates/fractron9000/src/: app_helpers.rs  app_layout.rs  app_panel.rs  app_viewport.rs  camera_math.rs  gpu.rs  lib.rs  main.rs  platform_bootstrap.rs  platform_open.rs  platform_save.rs  tone_map_test.rs
crates/fractron9000/src/shaders/: branch_common.wgsl  iterate.wgsl  tonemap.wgsl
(+14 files in other folders)
