[package]
name = "fractron9000"
version = "0.1.0"
edition = "2021"

# cdylib is required for the WASM build (produces the .wasm file).
# rlib allows the native binary (main.rs) to link against the library.
# The explicit name avoids a PDB filename collision with the binary on Windows.
[lib]
name = "fractron9000_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
fractal-core = { path = "../fractal-core" }
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
wgpu = "22"
glam = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
