[package]
name = "fractron9000"
version = "0.1.0"
edition = "2024"

# cdylib is required for the WASM build (produces the .wasm file).
# rlib allows the native binary (main.rs) to link against the library.
# The explicit name avoids a PDB filename collision with the binary on Windows.
[lib]
name = "fractron9000_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
fractal-core = { path = "../fractal-core" }
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wgpu", "accesskit", "web_screen_reader"] }
egui = "0.34.3"
wgpu = "29.0.3"
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
